<resources>
    <string name="app_name">BlueLinerGPSTracker</string>
    <string name="upload_website">upload website</string>
    <string name="tracking_is_off">Відстеження вимкнено</string>
    <string name="tracking_is_on">Відстеження активовано</string>
    <string name="upload_frequency">Оновити веб-сайт кожні:</string>


    <string name="twenty_seconds">20 секунд</string>
    <string name="thirty_seconds">30 секунд</string>
    <string name="forty_seconds">40 секунд</string>
    <string name="fifty_seconds">50 секунд</string>
    <string name="sixty_seconds">60 секунд</string>
    <string name="ninety_seconds">90 секунд</string>
    <string name="one_hundred_and_twenty_seconds">120 секунд</string>

    <string name="user_needs_to_restart_tracking">Будь ласка, перезапустіть відстеження, щоб змінити часовий інтервал</string>
    <string name="textfield_empty_or_spaces">Будь ласка заповніть поле веб-сайт, і воно не може мати пробіл</string>
    <string name="gps_tracker_is_working">GPS Tracker працює</string>

    <string name="default_upload_website">http://45.55.132.244/blue_lainer/bl_api_v1/traking/</string>

    <string name="click_to_go_to_the_application">Натисніть, щоб перейти до додатка</string>
</resources>
