<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/mainRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetTop="300dp"
                android:insetLeft="10dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/uploadWebsiteEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/upload_website"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/intervalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/uploadWebsiteEditText"
        android:layout_marginTop="25dp"
        android:text="@string/upload_frequency"/>

    <RadioGroup
        android:id="@+id/intervalRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/intervalTextView"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/interval20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_seconds">
        </RadioButton>

        <RadioButton
            android:id="@+id/interval30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty_seconds">
        </RadioButton>

        <RadioButton
            android:id="@+id/interval40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forty_seconds">
        </RadioButton>
        <RadioButton
            android:id="@+id/interval50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifty_seconds">
        </RadioButton>

        <RadioButton
            android:id="@+id/interval60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixty_seconds">
        </RadioButton>

        <RadioButton
            android:id="@+id/interval90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ninety_seconds">
        </RadioButton>
        <RadioButton
            android:id="@+id/interval120"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_hundred_and_twenty_seconds">
        </RadioButton>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trackingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="50dip"
            android:background="@drawable/red_tracking_button"
            android:text="@string/tracking_is_off"/>
    </LinearLayout>
</RelativeLayout>